<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context="com.example.pablo.joinme.Create_event">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txtEssai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Place"
                android:textSize="30dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Topic"
                android:textSize="30dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/topic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Level"
                    android:textSize="30dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtSeekBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:textSize="30dp"
                    android:textStyle="bold" />


            </LinearLayout>


            <SeekBar
                android:id="@+id/level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="8"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:progress="2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">


                <Button
                    android:id="@+id/timeEvent"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@null"
                    android:drawableLeft="@drawable/ic_time"
                    android:text="@string/Time"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="?attr/colorControlNormal"
                    android:textSize="30dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/thetime"
                    android:textSize="30dp"
                    android:textStyle="bold" />


            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Comment"
                android:textSize="30dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:inputType="textMultiLine" />


            <Button
                android:id="@+id/btnCreateEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Create Event" />


        </LinearLayout>


    </ScrollView>


</LinearLayout>
